--- a/test.html
+++ b/test.html
@@ -88,6 +88,30 @@
 		you started.</p>
 
 	<fieldset>
+		<legend>Account Management</legend>
+		<div class="row">
+			<div>
+				<label>Username</label>
+				<input id="username" type="text" placeholder="Enter username" />
+				<label>Password</label>
+				<input id="password" type="password" placeholder="Enter password" />
+				<button id="btnRegister">Register</button>
+				<button id="btnLogin">Login</button>
+				<div class="muted" id="authOut"></div>
+			</div>
+			<div>
+				<label>Current User</label>
+				<div id="currentUser" class="muted">Not logged in</div>
+				<button id="btnLogout">Logout</button>
+				<label>Voice Model</label>
+				<input id="voiceModel" type="text" placeholder="Voice model ID" />
+				<button id="btnUpdateVoice">Update Voice Model</button>
+				<div class="muted" id="voiceUpdateOut"></div>
+			</div>
+		</div>
+	</fieldset>
+
+	<fieldset>
 		<legend>Config</legend>
 		<div class="row">
 			<div>
@@ -95,8 +119,8 @@
 				<input id="baseUrl" type="text" value="http://localhost:8000" />
 			</div>
 			<div>
-				<label>User ID</label>
-				<input id="userId" type="text" value="alice" />
+				<label>User ID (auto-filled when logged in)</label>
+				<input id="userId" type="text" value="" readonly />
 			</div>
 		</div>
 		<div>
@@ -205,9 +229,127 @@
 		}
 
 		let ws;
+		let currentAccount = null;
+		
 		function wsUrl() {return `${$("baseUrl").value.replace(/\/$/, "")}/ws/events/${encodeURIComponent($("userId").value)}`;}
+		
+		function updateCurrentUser() {
+			const userEl = $("currentUser");
+			const userIdEl = $("userId");
+			if (currentAccount) {
+				userEl.textContent = currentAccount.username;
+				userIdEl.value = currentAccount.username;
+				$("voiceModel").value = currentAccount.voice_model || "";
+			} else {
+				userEl.textContent = "Not logged in";
+				userIdEl.value = "";
+				$("voiceModel").value = "";
+			}
+		}
+		
+		// Account management functions
+		$("btnRegister").onclick = async () => {
+			const username = $("username").value.trim();
+			const password = $("password").value;
+			if (!username || !password) {
+				$("authOut").textContent = "Please enter username and password";
+				return;
+			}
+			$("authOut").textContent = "Registering...";
+			try {
+				const r = await fetch(`${$("baseUrl").value}/accounts/register`, {
+					method: 'POST',
+					headers: {'content-type': 'application/json'},
+					body: JSON.stringify({username, password})
+				});
+				const j = await r.json();
+				if (!r.ok) {
+					$("authOut").textContent = `Error: ${j.error || 'Registration failed'}`;
+					return;
+				}
+				currentAccount = j;
+				updateCurrentUser();
+				$("authOut").textContent = `Registered successfully!`;
+				log(`Account registered: ${username}`, "ok");
+			} catch (e) {
+				$("authOut").textContent = "Registration failed";
+				log("Registration error", "err");
+			}
+		};
+		
+		$("btnLogin").onclick = async () => {
+			const username = $("username").value.trim();
+			const password = $("password").value;
+			if (!username || !password) {
+				$("authOut").textContent = "Please enter username and password";
+				return;
+			}
+			$("authOut").textContent = "Logging in...";
+			try {
+				const r = await fetch(`${$("baseUrl").value}/accounts/login`, {
+					method: 'POST',
+					headers: {'content-type': 'application/json'},
+					body: JSON.stringify({username, password})
+				});
+				const j = await r.json();
+				if (!r.ok) {
+					$("authOut").textContent = `Error: ${j.error || 'Login failed'}`;
+					return;
+				}
+				currentAccount = j;
+				updateCurrentUser();
+				$("authOut").textContent = `Logged in as ${username}`;
+				log(`Logged in: ${username}`, "ok");
+			} catch (e) {
+				$("authOut").textContent = "Login failed";
+				log("Login error", "err");
+			}
+		};
+		
+		$("btnLogout").onclick = () => {
+			currentAccount = null;
+			updateCurrentUser();
+			$("authOut").textContent = "Logged out";
+			log("Logged out", "ok");
+		};
+		
+		$("btnUpdateVoice").onclick = async () => {
+			if (!currentAccount) {
+				$("voiceUpdateOut").textContent = "Please log in first";
+				return;
+			}
+			const voiceModel = $("voiceModel").value.trim();
+			if (!voiceModel) {
+				$("voiceUpdateOut").textContent = "Please enter a voice model ID";
+				return;
+			}
+			$("voiceUpdateOut").textContent = "Updating...";
+			try {
+				const r = await fetch(`${$("baseUrl").value}/accounts/${encodeURIComponent(currentAccount.username)}/voice-model`, {
+					method: 'POST',
+					headers: {'content-type': 'application/json'},
+					body: JSON.stringify({voice_model: voiceModel})
+				});
+				const j = await r.json();
+				if (!r.ok) {
+					$("voiceUpdateOut").textContent = `Error: ${j.error || 'Update failed'}`;
+					return;
+				}
+				currentAccount.voice_model = voiceModel;
+				updateCurrentUser();
+				$("voiceUpdateOut").textContent = `Voice model updated to ${voiceModel}`;
+				log(`Voice model updated: ${voiceModel}`, "ok");
+			} catch (e) {
+				$("voiceUpdateOut").textContent = "Update failed";
+				log("Voice model update error", "err");
+			}
+		};
 
 		$("btnWsConnect").onclick = () => {
+			if (!currentAccount) {
+				log("Please log in first to connect WebSocket", "err");
+				return;
+			}
 			if (ws && ws.readyState === WebSocket.OPEN) return;
 			ws = new WebSocket(wsUrl().replace(/^http/, 'ws'));
 			ws.onopen = () => {$("wsState").textContent = "connected"; log("WS open", "ok");};
@@ -256,6 +398,10 @@
 		};
 
 		$("btnSetPersonality").onclick = async () => {
+			if (!currentAccount) {
+				$("personalitySetOut").textContent = 'Please log in first';
+				return;
+			}
 			const personalityId = $("personalityId").value.trim();
 			if (!personalityId) {
 				$("personalitySetOut").textContent = 'enter an id';
@@ -280,6 +426,10 @@
 		};
 
 		$("btnChatSend").onclick = async () => {
+			if (!currentAccount) {
+				$("chatResp").textContent = "Please log in first";
+				return;
+			}
 			const payload = {user_id: $("userId").value, text: $("chatText").value};
 			const r = await fetch(`${$("baseUrl").value}/chat/send`, {method: 'POST', headers: {'content-type': 'application/json'}, body: JSON.stringify(payload)});
 			const j = await r.json();
@@ -371,6 +521,10 @@
 		};
 
 		$("btnVoiceOn").onclick = async () => {
+			if (!currentAccount) {
+				$("prefOut").textContent = 'Please log in first';
+				return;
+			}
 			const r = await fetch(`${$("baseUrl").value}/prefs/${encodeURIComponent($("userId").value)}/voice`, {
 				method: 'POST', headers: {'content-type': 'application/json'}, body: JSON.stringify({enabled: true})
 			});
@@ -378,6 +532,10 @@
 			$("prefOut").textContent = JSON.stringify(j);
 		};
 		$("btnVoiceOff").onclick = async () => {
+			if (!currentAccount) {
+				$("prefOut").textContent = 'Please log in first';
+				return;
+			}
 			const r = await fetch(`${$("baseUrl").value}/prefs/${encodeURIComponent($("userId").value)}/voice`, {
 				method: 'POST', headers: {'content-type': 'application/json'}, body: JSON.stringify({enabled: false})
 			});
@@ -386,11 +544,19 @@
 		};
 
 		$("btnStartPom").onclick = async () => {
+			if (!currentAccount) {
+				log("Please log in first to start Pomodoro", "err");
+				return;
+			}
 			const payload = {user_id: $("userId").value, focus_min: +$("focusMin").value, break_min: +$("breakMin").value, cycles: +$("cycles").value};
 			const r = await fetch(`${$("baseUrl").value}/pomodoro/start`, {method: 'POST', headers: {'content-type': 'application/json'}, body: JSON.stringify(payload)});
 			log(`pomodoro/start ${r.ok ? 'ok' : 'err'}`);
 		};
 		$("btnStopPom").onclick = async () => {
+			if (!currentAccount) {
+				log("Please log in first to stop Pomodoro", "err");
+				return;
+			}
 			const payload = {user_id: $("userId").value};
 			const r = await fetch(`${$("baseUrl").value}/pomodoro/stop`, {method: 'POST', headers: {'content-type': 'application/json'}, body: JSON.stringify(payload)});
 			log(`pomodoro/stop ${r.ok ? 'ok' : 'err'}`);
